syntax = "proto3";

package twoserver_proto;

service HelloServer {
    rpc SayHello (HelloRequest) returns (HelloReplay) {
    }
}

message HelloRequest {
    string name = 1;
}

message HelloReplay {
    string message = 1;
}